# rust_file_manager

./: Cargo.toml
src/: commands.rs  main.rs
src/commands/: list.rs  rename.rs  search.rs  stat.rs
