[package]
name = "rust_file_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }   #命令行解析
rayon = "1.8"                                       #并行处理
walkdir = "2.4"                                     #遍历目录
anyhow = "1.0"                                      #简化错误处理
axum = { version = "0.8.1" }  #模块化应用程序框架
tokio = { version = "1.0", features = ["full"] }    #异步库
serde = { version = "1.0", features = ["derive"] }  #序列化和反序列化
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
jsonwebtoken = "9.0" #JWT支持
tower-http = { version = "0.6", features = ["cors"]} #中间件
argon2 = "0.5" #密码哈希
dotenv = "0.15" #环境变量加载